[xl]: use rvr map api

--- a/ckanext/rvr/assets/webassets.yml
+++ b/ckanext/rvr/assets/webassets.yml
@@ -17,3 +17,12 @@ daterange_js:
     - js/rvrDateRange.js
     - js/daterangepicker.min.js
     - js/moment.min.js
+
+spatial_query_js:
+  output: rvr/%(version)s_spatial_query.js
+  extra:
+    preload:
+      - vendor/jquery
+  contents:
+    - js/rvrSpatialQuery.js
+    - js/rvrMap.js
